add styles for profile archivment tabs

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -230,3 +230,8 @@ body main .opportunuties {
         display: block;
     }
 }
+
+// стили для блока с ачивками
+.archivments {
+    display: grid;
+}
