Add weight and height

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -234,4 +234,6 @@ body main .opportunuties {
 // стили для блока с ачивками
 .archivments {
     display: grid;
+    width: 80%;
+    height: auto;
 }
