--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -236,4 +236,10 @@ body main .opportunuties {
     display: grid;
     width: 80%;
     height: auto;
+    .archivment {
+        display: flex;
+        width: 150px;
+        height: 40px;
+        background-color: #cfcfcf;
+    }
 }
