--- a/scss/profile.css
+++ b/scss/profile.css
@@ -237,4 +237,30 @@ body main .opportunuties {
 .tab-content > .active {
   display: block;
 }
+
+.archivments {
+  display: -ms-grid;
+  display: grid;
+  width: 80%;
+}
+
+.archivments .archivment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 150px;
+  height: 40px;
+  background-color: #8b7c7c;
+}
+
+.archivments .archivment .circle-avatar {
+  height: 30px;
+  width: 30px;
+  background-color: #000;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
 /*# sourceMappingURL=profile.css.map */
