refactor style profile

--- a/scss/profile.css
+++ b/scss/profile.css
@@ -241,6 +241,11 @@ body main .opportunuties {
 .archivments {
   display: -ms-grid;
   display: grid;
+  -ms-grid-rows: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 2vw;
   width: 80%;
 }
 
