--- a/scss/profile.css
+++ b/scss/profile.css
@@ -254,7 +254,11 @@ body main .opportunuties {
   display: -ms-flexbox;
   display: flex;
   width: 250px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 70px;
+  border-radius: 7px;
   background-color: #8b7c7c;
 }
 
