--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -243,6 +243,7 @@ body main .opportunuties {
         width: 250px;
         align-items: center;
         height: 70px;
+        flex-direction: column;
         border-radius: 7px;
         background-color: #8b7c7c;
         .circle-avatar {
