--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -248,14 +248,17 @@ body main .opportunuties {
         .circle-avatar {
             height: 30px;
             width: 30px;
+            margin-left: 20px;
             background-color: #000;
             border-radius: 50%;
             -webkit-border-radius: 50%;
             -moz-border-radius: 50%;
             -ms-border-radius: 50%;
             -o-border-radius: 50%;
+            margin-right: 10px;
         }
         .archivment-info {
+            text-align: center;
             display: flex;
             flex-direction: column;
         }
