--- a/scss/profile.css
+++ b/scss/profile.css
@@ -285,4 +285,12 @@ body main .opportunuties {
       -ms-flex-direction: column;
           flex-direction: column;
 }
+
+.archivments .archivment .archivment-info span {
+  margin-top: 5px;
+}
+
+.archivments .archivment .archivment-info nav {
+  margin-top: -5px;
+}
 /*# sourceMappingURL=profile.css.map */
