--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -261,6 +261,12 @@ body main .opportunuties {
             text-align: center;
             display: flex;
             flex-direction: column;
+            span {
+                margin-top: 5px;
+            }
+            nav {
+                margin-top: -5px;
+            }
         }
     }
 }
