add shadow to archivment

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -243,6 +243,7 @@ body main .opportunuties {
         width: 250px;
         align-items: center;
         height: 70px;
+        box-shadow: 0px 1px 10px 1px #000;
         border-radius: 7px;
         background-color: #b6a8a8;
         .circle-avatar {
