--- a/scss/profile.css
+++ b/scss/profile.css
@@ -258,6 +258,8 @@ body main .opportunuties {
       -ms-flex-align: center;
           align-items: center;
   height: 70px;
+  -webkit-box-shadow: 0px 1px 10px 1px #000;
+          box-shadow: 0px 1px 10px 1px #000;
   border-radius: 7px;
   background-color: #b6a8a8;
 }
