--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -217,6 +217,7 @@ body main .opportunuties {
 .tab-content {
     float: left;
     width: 100%;
+    border-radius: 5px;
     >.tab-pane {
         display: none;
         &.active {
