--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -223,7 +223,7 @@ body main .opportunuties {
             display: block;
             padding: 2.5% 3.5%;
             background-color: #efefef;
-            border-radius: 5px;
+            border-radius: 0 5px 5px 5px;
             height: auto;
         }
     }
