--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -205,7 +205,6 @@ body main .opportunuties {
                     color: #555;
                     cursor: default;
                     background-color: #fff;
-                    border-bottom-color: transparent;
                 }
             }
         }
@@ -223,6 +222,7 @@ body main .opportunuties {
             background-color: #efefef;
             border-radius: 0 5px 5px 5px;
             height: auto;
+            border: 1px 0 1px 1px solid gray;
         }
     }
     >.active {
