--- a/scss/profile.css
+++ b/scss/profile.css
@@ -213,7 +213,6 @@ body main .opportunuties {
   color: #555;
   cursor: default;
   background-color: #fff;
-  border-bottom-color: transparent;
 }
 
 .tab-content {
@@ -231,6 +230,7 @@ body main .opportunuties {
   background-color: #efefef;
   border-radius: 0 5px 5px 5px;
   height: auto;
+  border: 1px 0 1px 1px solid gray;
 }
 
 .tab-content > .active {
