--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -222,7 +222,7 @@ body main .opportunuties {
             background-color: #efefef;
             border-radius: 0 5px 5px 5px;
             height: auto;
-            border: 1px 0 1px 1px solid gray;
+            border: 1px solid #000;
         }
     }
     >.active {
