--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -180,6 +180,7 @@ body main .opportunuties {
     .nav-tabs {
         float: left;
         width: 100%;
+        border: none;
         margin: 0;
         list-style-type: none;
         >li {
