--- a/scss/profile.css
+++ b/scss/profile.css
@@ -240,6 +240,7 @@ body main .opportunuties {
 .archivments {
   display: -ms-grid;
   display: grid;
+  margin-top: 5%;
   -ms-grid-rows: 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr;
   -ms-grid-columns: 1fr 1fr 1fr;
