--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -233,6 +233,7 @@ body main .opportunuties {
 // стили для блока с ачивками
 .archivments {
     display: grid;
+    margin-top: 5%;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 2vw;
