change font to title

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -238,10 +238,14 @@ body main .opportunuties {
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 2vw;
     width: 100%;
+    h3 {
+        font-family: "BankGothicRUSS";
+    }
     .archivment {
         display: flex;
         width: 250px;
         align-items: center;
+        font-family: "";
         height: 70px;
         box-shadow: 0px 1px 10px 1px #000;
         border-radius: 7px;
