--- a/scss/profile.css
+++ b/scss/profile.css
@@ -249,6 +249,10 @@ body main .opportunuties {
   width: 100%;
 }
 
+.archivments h3 {
+  font-family: "BankGothicRUSS";
+}
+
 .archivments .archivment {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -257,6 +261,7 @@ body main .opportunuties {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-family: "";
   height: 70px;
   -webkit-box-shadow: 0px 1px 10px 1px #000;
           box-shadow: 0px 1px 10px 1px #000;
