--- a/scss/profile.css
+++ b/scss/profile.css
@@ -250,7 +250,7 @@ body main .opportunuties {
 }
 
 .archivments h3 {
-  font-family: "BankGothicRUSS";
+  font-family: 'BankGothicRUSS';
 }
 
 .archivments .archivment {
