--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -239,7 +239,7 @@ body main .opportunuties {
     grid-gap: 2vw;
     width: 100%;
     h3 {
-        font-family: "BankGothicRUSS";
+        font-family: 'BankGothicRUSS';
     }
     .archivment {
         display: flex;
