--- a/scss/profile.css
+++ b/scss/profile.css
@@ -265,7 +265,8 @@ body main .opportunuties {
   -webkit-box-shadow: 0px 1px 10px 1px #000;
           box-shadow: 0px 1px 10px 1px #000;
   border-radius: 7px;
-  background-color: #b6a8a8;
+  background: -webkit-gradient(linear, left top, right top, from(#833ab4), color-stop(0%, #fd1d1d), to(#fcb045));
+  background: linear-gradient(90deg, #833ab4 0%, #fd1d1d 0%, #fcb045 100%);
 }
 
 .archivments .archivment .circle-avatar {
