--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -248,7 +248,7 @@ body main .opportunuties {
         height: 70px;
         box-shadow: 0px 1px 10px 1px #000;
         border-radius: 7px;
-        background-color: #b6a8a8;
+        background: linear-gradient(90deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 0%, rgba(252, 176, 69, 1) 100%);
         .circle-avatar {
             height: 30px;
             width: 30px;
