--- a/scss/profile.css
+++ b/scss/profile.css
@@ -265,8 +265,8 @@ body main .opportunuties {
   -webkit-box-shadow: 0px 1px 10px 1px #000;
           box-shadow: 0px 1px 10px 1px #000;
   border-radius: 7px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#33243d), color-stop(46%, #fd1d1d), to(#e66033));
-  background: linear-gradient(180deg, #33243d 0%, #fd1d1d 46%, #e66033 100%);
+  background: #33243d;
+  background: radial-gradient(circle, #33243d 0%, rgba(253, 47, 29, 0.751138) 46%, #e66033 100%);
 }
 
 .archivments .archivment .circle-avatar {
