--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -248,7 +248,8 @@ body main .opportunuties {
         height: 70px;
         box-shadow: 0px 1px 10px 1px #000;
         border-radius: 7px;
-        background: linear-gradient(180deg, rgba(51, 36, 61, 1) 0%, rgba(253, 29, 29, 1) 46%, rgba(230, 96, 51, 1) 100%);
+        background: rgb(51, 36, 61);
+        background: radial-gradient(circle, rgba(51, 36, 61, 1) 0%, rgba(253, 47, 29, 0.7511379551820728) 46%, rgba(230, 96, 51, 1) 100%);
         .circle-avatar {
             height: 30px;
             width: 30px;
