--- a/scss/profile.css
+++ b/scss/profile.css
@@ -302,6 +302,6 @@ body main .opportunuties {
 .archivments .archivment .archivment-info nav {
   display: block;
   font-size: 18px;
-  margin-top: -5px;
+  margin-bottom: 10px;
 }
 /*# sourceMappingURL=profile.css.map */
