--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -274,7 +274,7 @@ body main .opportunuties {
             nav {
                 display: block;
                 font-size: 18px;
-                margin-top: -5px;
+                margin-bottom: 10px;
             }
         }
     }
