--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -273,6 +273,7 @@ body main .opportunuties {
             }
             nav {
                 display: block;
+                border: 1px solid black;
                 font-size: 18px;
                 margin-bottom: 10px;
             }
