--- a/scss/profile.css
+++ b/scss/profile.css
@@ -301,6 +301,7 @@ body main .opportunuties {
 
 .archivments .archivment .archivment-info nav {
   display: block;
+  border: 1px solid black;
   font-size: 18px;
   margin-bottom: 10px;
 }
