--- a/scss/style.scss
+++ b/scss/style.scss
@@ -127,8 +127,8 @@
                                 width: auto;
                                 height: 45px;
                                 transition: all 5s;
-                                font-size: 20px;
-                                font-size: 22px;
+                                font-size: 18px;
+                                padding: 5px;
                                 border: none;
                                 border-radius: 20px;
                                 outline: none;
