remove one fraction

--- a/scss/profile.css
+++ b/scss/profile.css
@@ -241,10 +241,10 @@ body main .opportunuties {
   display: -ms-grid;
   display: grid;
   margin-top: 5%;
-  -ms-grid-rows: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
   grid-gap: 2vw;
   width: 100%;
 }
