--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -234,8 +234,8 @@ body main .opportunuties {
 .archivments {
     display: grid;
     margin-top: 5%;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 2vw;
     width: 100%;
     h3 {
