remove one coloumn

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -235,7 +235,7 @@ body main .opportunuties {
     display: grid;
     margin-top: 5%;
     grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 2vw;
     width: 100%;
     h3 {
