--- a/scss/profile.css
+++ b/scss/profile.css
@@ -243,8 +243,8 @@ body main .opportunuties {
   margin-top: 5%;
   -ms-grid-rows: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   grid-gap: 2vw;
   width: 100%;
 }
