--- a/scss/profile.css
+++ b/scss/profile.css
@@ -238,13 +238,10 @@ body main .opportunuties {
 }
 
 .archivments {
-  display: -ms-grid;
-  display: grid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin-top: 5%;
-  -ms-grid-rows: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
   grid-gap: 2vw;
   width: 100%;
 }
