--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -232,10 +232,10 @@ body main .opportunuties {
 
 // стили для блока с ачивками
 .archivments {
-    display: grid;
+    display: flex;
     margin-top: 5%;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr;
+    // grid-template-rows: 1fr 1fr;
+    // grid-template-columns: 1fr;
     grid-gap: 2vw;
     width: 100%;
     h3 {
