--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -231,7 +231,7 @@ body main .opportunuties {
 }
 
 // стили для блока с ачивками
-.archivments {
+archivments {
     display: flex;
     margin-top: 5%;
     // grid-template-rows: 1fr 1fr;
