--- a/scss/profile.css
+++ b/scss/profile.css
@@ -254,7 +254,7 @@ body main .opportunuties {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 300px;
+  width: 30%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
