--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -243,7 +243,7 @@ body main .opportunuties {
     }
     .archivment {
         display: flex;
-        width: 300px;
+        width: 30%;
         align-items: center;
         height: 90px;
         box-shadow: 0px 1px 10px 1px #000;
