change color circle

--- a/scss/profile.css
+++ b/scss/profile.css
@@ -270,7 +270,7 @@ body main .opportunuties {
   height: 30px;
   width: 30px;
   margin-left: 20px;
-  background-color: #7e7a7a;
+  background-color: #000;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
