--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -254,7 +254,7 @@ body main .opportunuties {
             height: 30px;
             width: 30px;
             margin-left: 20px;
-            background-color: rgb(126, 122, 122);
+            background-color: #000;
             border-radius: 50%;
             -webkit-border-radius: 50%;
             -moz-border-radius: 50%;
