--- a/scss/profile.css
+++ b/scss/profile.css
@@ -237,7 +237,7 @@ body main .opportunuties {
   display: block;
 }
 
-archivments {
+.archivments {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -254,7 +254,7 @@ archivments .archivment {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 300px;
+  width: 50%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
