--- a/scss/profile.css
+++ b/scss/profile.css
@@ -174,55 +174,6 @@ body main .opportunuties {
   width: 60%;
   height: 700px;
   margin-left: 5%;
-}
-
-.content {
-  background-color: #FFF;
-  width: 400px;
-  height: 300px;
-  margin: 0 auto;
-  border-radius: 3px;
-}
-
-.content p {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 30px 25px;
-  display: none;
-  /* Just for show */
-  line-height: 300px;
-  padding: 0;
-  text-align: center;
-  color: #888;
-}
-
-.tabs,
-.tabs li {
-  list-style: none;
-  margin: 0 0 -3px 0;
-  padding: 0;
-}
-
-.tabs {
-  background-color: #53626E;
-  width: 400px;
-  height: auto;
-  margin: 50px auto 0px auto;
-}
-
-.tabs li {
-  width: auto;
-  display: inline-block;
-  padding: 10px 25px 10px 25px;
-  color: #BBB;
-  cursor: pointer;
-}
-
-.tabs li.active {
-  background-color: #FFF;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  color: #333;
+  background-color: #fff;
 }
 /*# sourceMappingURL=profile.css.map */
