--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -171,54 +171,8 @@ body main .opportunuties {
     width: 60%;
     height: 700px;
     margin-left: 5%;
+    background-color: #fff;
     // background-color: #fff;
 }
 
 //Tab's profile opportunities
-.content {
-    background-color: #FFF;
-    width: 400px;
-    height: 300px;
-    margin: 0 auto;
-    border-radius: 3px;
-    p {
-        height: 100%;
-        width: 100%;
-        margin: 0;
-        padding: 30px 25px;
-        display: none;
-        /* Just for show */
-        line-height: 300px;
-        padding: 0;
-        text-align: center;
-        color: #888;
-    }
-}
-
-.tabs {
-    &,
-    li {
-        list-style: none;
-        margin: 0 0 -3px 0;
-        padding: 0;
-    }
-    & {
-        background-color: #53626E;
-        width: 400px;
-        height: auto;
-        margin: 50px auto 0px auto;
-    }
-    li {
-        width: auto;
-        display: inline-block;
-        padding: 10px 25px 10px 25px;
-        color: #BBB;
-        cursor: pointer;
-        &.active {
-            background-color: #FFF;
-            border-top-left-radius: 3px;
-            border-top-right-radius: 3px;
-            color: #333;
-        }
-    }
-}
