--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -168,6 +168,7 @@ body main .man-info .info span nav {
 }
 
 body main .opportunuties {
+    display: flex;
     width: 60%;
     height: 700px;
     margin-left: 5%;
