--- a/scss/profile.css
+++ b/scss/profile.css
@@ -179,176 +179,156 @@ body main .opportunuties {
   margin-left: 5%;
 }
 
-.design-process-section .text-align-center {
-  line-height: 25px;
-  margin-bottom: 12px;
-}
-
-.design-process-content {
-  border: 1px solid #e9e9e9;
+.wrapper {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  border-radius: 8px;
+  background: #f0f0f0;
   position: relative;
-  padding: 16px 34% 30px 30px;
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
 
-.design-process-content img {
+header h1 {
+  background: #f0f0f0;
+  color: #555;
+  padding: 1rem;
+  border-radius: 8px 8px 0 0;
+  -webkit-box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.3);
+  position: relative;
+  z-index: 8;
+}
+
+nav {
+  width: 100%;
+  background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
+}
+
+@media (min-width: 769px) {
+  nav {
+    float: left;
+    width: 96px;
+    height: calc(100% - 3rem);
+    border-radius: 0 0 0 8px;
+  }
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (min-width: 769px) {
+  nav ul {
+    display: block;
+  }
+}
+
+nav li {
+  line-height: 3;
+  padding: 0 1rem;
+  border-right: 1px solid #f0f0f0;
+  cursor: pointer;
+  color: #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+@media (min-width: 769px) {
+  nav li {
+    border-bottom: 1px solid #f0f0f0;
+    border-right: none;
+  }
+}
+
+nav li.hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+nav li.pressed {
+  background: rgba(255, 255, 255, 0.7);
+}
+
+nav li.currentPage {
+  background: rgba(255, 255, 255, 0.5);
+}
+
+#contents {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   position: absolute;
+  height: calc(100% - 6rem);
+  width: 100%;
+  top: 6rem;
+  left: 0;
+  border-radius: 0 0 8px 0;
+  overflow: hidden;
+  background: linear-gradient(135deg, #1c1a30 0%, #38335d 100%);
+}
+
+@media (min-width: 769px) {
+  #contents {
+    height: calc(100% - 3rem);
+    width: calc(100% - 6rem);
+    top: 3rem;
+    left: 96px;
+  }
+}
+
+article {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  padding: 2rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: linear-gradient(135deg, #38335d 0%, #1c1a30 100%);
   top: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 0;
-  max-height: 100%;
+  left: -100%;
 }
 
-.design-process-content h3 {
-  margin-bottom: 16px;
+article.hide {
+  -webkit-transition: left 0s 0.5s;
+  transition: left 0s 0.5s;
 }
 
-.design-process-content p {
-  line-height: 26px;
-  margin-bottom: 12px;
+article:nth-of-type(1) {
+  z-index: 5;
 }
 
-.process-model {
-  list-style: none;
-  padding: 0;
-  position: relative;
-  max-width: 600px;
-  margin: 20px auto 26px;
-  border: none;
-  z-index: 0;
+article:nth-of-type(2) {
+  z-index: 4;
 }
 
-.process-model li::after {
-  background: #e5e5e5 none repeat scroll 0 0;
-  bottom: 0;
-  content: "";
-  display: block;
-  height: 4px;
-  margin: 0 auto;
-  position: absolute;
-  right: -30px;
-  top: 33px;
-  width: 85%;
-  z-index: -1;
+article:nth-of-type(3) {
+  z-index: 3;
 }
 
-.process-model li.visited::after {
-  background: #57b87b;
+article:nth-of-type(4) {
+  z-index: 2;
 }
 
-.process-model li:last-child::after {
-  width: 0;
+article:nth-of-type(5) {
+  z-index: 1;
 }
 
-.process-model li {
-  display: inline-block;
-  width: 18%;
-  text-align: center;
-  float: none;
+article.show {
+  -webkit-transition: left 0.5s;
+  transition: left 0.5s;
+  left: 0;
+  z-index: 6;
 }
 
-.nav-tabs.process-model > li.active > a,
-.nav-tabs.process-model > li.active > a:hover,
-.nav-tabs.process-model > li.active > a:focus,
-.process-model li a:hover,
-.process-model li a:focus {
-  border: none;
-  background: transparent;
+article section {
+  width: 100%;
+  color: #fff;
 }
 
-.process-model li a {
-  padding: 0;
-  border: none;
-  color: #606060;
-}
-
-.process-model li.active,
-.process-model li.visited {
-  color: #57b87b;
-}
-
-.process-model li.active a,
-.process-model li.active a:hover,
-.process-model li.active a:focus,
-.process-model li.visited a,
-.process-model li.visited a:hover,
-.process-model li.visited a:focus {
-  color: #57b87b;
-}
-
-.process-model li.active p,
-.process-model li.visited p {
-  font-weight: 600;
-}
-
-.process-model li i {
-  display: block;
-  height: 68px;
-  width: 68px;
-  text-align: center;
-  margin: 0 auto;
-  background: #f5f6f7;
-  border: 2px solid #e5e5e5;
-  line-height: 65px;
-  font-size: 30px;
-  border-radius: 50%;
-}
-
-.process-model li.active i,
-.process-model li.visited i {
-  background: #fff;
-  border-color: #57b87b;
-}
-
-.process-model li p {
-  font-size: 14px;
-  margin-top: 11px;
-}
-
-.process-model.contact-us-tab li.visited a,
-.process-model.contact-us-tab li.visited p {
-  color: #606060 !important;
-  font-weight: normal;
-}
-
-.process-model.contact-us-tab li::after {
-  display: none;
-}
-
-.process-model.contact-us-tab li.visited i {
-  border-color: #e5e5e5;
-}
-
-@media screen and (max-width: 560px) {
-  .more-icon-preocess.process-model li span {
-    font-size: 23px;
-    height: 50px;
-    line-height: 46px;
-    width: 50px;
-  }
-  .more-icon-preocess.process-model li::after {
-    top: 24px;
-  }
-}
-
-@media screen and (max-width: 380px) {
-  .process-model.more-icon-preocess li {
-    width: 16%;
-  }
-  .more-icon-preocess.process-model li span {
-    font-size: 16px;
-    height: 35px;
-    line-height: 32px;
-    width: 35px;
-  }
-  .more-icon-preocess.process-model li p {
-    font-size: 8px;
-  }
-  .more-icon-preocess.process-model li::after {
-    top: 18px;
-  }
-  .process-model.more-icon-preocess {
-    text-align: center;
-  }
+article section h1 {
+  font-size: 1.5rem;
+  margin: 0 0 2rem 0;
 }
 /*# sourceMappingURL=profile.css.map */
