--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -175,175 +175,125 @@ body main .opportunuties {
 }
 
 //Tab's profile opportunities
-.design-process-section .text-align-center {
-    line-height: 25px;
-    margin-bottom: 12px;
-}
-
-.design-process-content {
-    border: 1px solid #e9e9e9;
+.wrapper {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    border-radius: 8px;
+    background: #f0f0f0;
     position: relative;
-    padding: 16px 34% 30px 30px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
 
-.design-process-content img {
+header {
+    h1 {
+        background: #f0f0f0; //linear-gradient(135deg, #0b5386 0%,#09256c 100%); 
+        color: #555;
+        //text-transform:uppercase;
+        padding: 1rem;
+        border-radius: 8px 8px 0 0;
+        box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.3);
+        position: relative;
+        z-index: 8;
+    }
+}
+
+nav {
+    width: 100%;
+    background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
+    @media (min-width: 769px) {
+        float: left;
+        width: 96px;
+        height: calc(100% - 3rem);
+        border-radius: 0 0 0 8px;
+    }
+    ul {
+        display: flex;
+        @media (min-width: 769px) {
+            display: block;
+        }
+    }
+    li {
+        line-height: 3;
+        padding: 0 1rem;
+        border-right: 1px solid #f0f0f0;
+        cursor: pointer;
+        color: #fff;
+        box-sizing: border-box;
+        @media (min-width: 769px) {
+            border-bottom: 1px solid #f0f0f0;
+            border-right: none;
+        }
+        &.hover {
+            background: rgba(255, 255, 255, 0.2);
+        }
+        &.pressed {
+            background: rgba(255, 255, 255, 0.7);
+        }
+        &.currentPage {
+            background: rgba(255, 255, 255, 0.5);
+        }
+    }
+}
+
+#contents {
+    box-sizing: border-box;
     position: absolute;
+    height: calc(100% - 6rem);
+    width: 100%;
+    top: 6rem;
+    left: 0;
+    @media (min-width: 769px) {
+        height: calc(100% - 3rem);
+        width: calc(100% - 6rem);
+        top: 3rem;
+        left: 96px;
+    }
+    border-radius:0 0 8px 0;
+    overflow:hidden;
+    background: linear-gradient(135deg,
+    #1c1a30 0%,
+    #38335d 100%);
+}
+
+article {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    padding: 2rem;
+    box-sizing: border-box;
+    background: linear-gradient(135deg, #38335d 0%, #1c1a30 100%);
     top: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 0;
-    max-height: 100%;
-}
-
-.design-process-content h3 {
-    margin-bottom: 16px;
-}
-
-.design-process-content p {
-    line-height: 26px;
-    margin-bottom: 12px;
-}
-
-.process-model {
-    list-style: none;
-    padding: 0;
-    position: relative;
-    max-width: 600px;
-    margin: 20px auto 26px;
-    border: none;
-    z-index: 0;
-}
-
-.process-model li::after {
-    background: #e5e5e5 none repeat scroll 0 0;
-    bottom: 0;
-    content: "";
-    display: block;
-    height: 4px;
-    margin: 0 auto;
-    position: absolute;
-    right: -30px;
-    top: 33px;
-    width: 85%;
-    z-index: -1;
-}
-
-.process-model li.visited::after {
-    background: #57b87b;
-}
-
-.process-model li:last-child::after {
-    width: 0;
-}
-
-.process-model li {
-    display: inline-block;
-    width: 18%;
-    text-align: center;
-    float: none;
-}
-
-.nav-tabs.process-model>li.active>a,
-.nav-tabs.process-model>li.active>a:hover,
-.nav-tabs.process-model>li.active>a:focus,
-.process-model li a:hover,
-.process-model li a:focus {
-    border: none;
-    background: transparent;
-}
-
-.process-model li a {
-    padding: 0;
-    border: none;
-    color: #606060;
-}
-
-.process-model li.active,
-.process-model li.visited {
-    color: #57b87b;
-}
-
-.process-model li.active a,
-.process-model li.active a:hover,
-.process-model li.active a:focus,
-.process-model li.visited a,
-.process-model li.visited a:hover,
-.process-model li.visited a:focus {
-    color: #57b87b;
-}
-
-.process-model li.active p,
-.process-model li.visited p {
-    font-weight: 600;
-}
-
-.process-model li i {
-    display: block;
-    height: 68px;
-    width: 68px;
-    text-align: center;
-    margin: 0 auto;
-    background: #f5f6f7;
-    border: 2px solid #e5e5e5;
-    line-height: 65px;
-    font-size: 30px;
-    border-radius: 50%;
-}
-
-.process-model li.active i,
-.process-model li.visited i {
-    background: #fff;
-    border-color: #57b87b;
-}
-
-.process-model li p {
-    font-size: 14px;
-    margin-top: 11px;
-}
-
-.process-model.contact-us-tab li.visited a,
-.process-model.contact-us-tab li.visited p {
-    color: #606060!important;
-    font-weight: normal
-}
-
-.process-model.contact-us-tab li::after {
-    display: none;
-}
-
-.process-model.contact-us-tab li.visited i {
-    border-color: #e5e5e5;
-}
-
-@media screen and (max-width: 560px) {
-    .more-icon-preocess.process-model li span {
-        font-size: 23px;
-        height: 50px;
-        line-height: 46px;
-        width: 50px;
+    left: -100%;
+    &.hide {
+        transition: left 0s 0.5s;
     }
-    .more-icon-preocess.process-model li::after {
-        top: 24px;
+    &:nth-of-type(1) {
+        z-index: 5;
     }
-}
-
-@media screen and (max-width: 380px) {
-    .process-model.more-icon-preocess li {
-        width: 16%;
+    &:nth-of-type(2) {
+        z-index: 4;
     }
-    .more-icon-preocess.process-model li span {
-        font-size: 16px;
-        height: 35px;
-        line-height: 32px;
-        width: 35px;
+    &:nth-of-type(3) {
+        z-index: 3;
     }
-    .more-icon-preocess.process-model li p {
-        font-size: 8px;
+    &:nth-of-type(4) {
+        z-index: 2;
     }
-    .more-icon-preocess.process-model li::after {
-        top: 18px;
+    &:nth-of-type(5) {
+        z-index: 1;
     }
-    .process-model.more-icon-preocess {
-        text-align: center;
+    &.show {
+        transition: left 0.5s;
+        left: 0;
+        z-index: 6;
+    }
+    section {
+        width: 100%;
+        color: #fff;
+        h1 {
+            font-size: 1.5rem;
+            margin: 0 0 2rem 0;
+        }
     }
 }
