--- a/scss/profile.css
+++ b/scss/profile.css
@@ -1,181 +1,332 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 img {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    outline: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  outline: none;
 }
 
 body {
-    width: 100%;
-    background-image: url("/img/bg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+  width: 100%;
+  background-image: url("/img/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 body header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 200px;
 }
 
 body header .page-name {
-    display: block;
-    color: white;
-    margin-left: 150px;
-    font-family: 'BankGothicRUSS';
-    font-size: 3em;
+  display: block;
+  color: white;
+  margin-left: 150px;
+  font-family: 'BankGothicRUSS';
+  font-size: 3em;
 }
 
 body header .nick-logout {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-left: 50%;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 50%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 body header .nick-logout h5 {
-    margin-right: 20px;
-    color: white;
-    font-size: 1.3em;
-    margin-top: 10px;
+  margin-right: 20px;
+  color: white;
+  font-size: 1.3em;
+  margin-top: 10px;
 }
 
 body header .nick-logout span {
-    margin-right: 20px;
-    color: white;
-    font-size: 1.5em;
+  margin-right: 20px;
+  color: white;
+  font-size: 1.5em;
 }
 
 body header .nick-logout a {
-    color: gray;
-    text-decoration: none;
-    font-size: 1.5em;
-    padding: 5px;
-    border-bottom: solid #fff;
-    border-bottom-width: 2px;
+  color: gray;
+  text-decoration: none;
+  font-size: 1.5em;
+  padding: 5px;
+  border-bottom: solid #fff;
+  border-bottom-width: 2px;
 }
 
 body header .nick-logout a:hover {
-    border-bottom: solid #fff;
-    border-bottom-width: 5px;
-    color: white;
+  border-bottom: solid #fff;
+  border-bottom-width: 5px;
+  color: white;
 }
 
 body main {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 body main .man-info {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    border-radius: 20px;
-    width: 15%;
-    margin-left: 10%;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    height: 700px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  border-radius: 20px;
+  width: 15%;
+  margin-left: 10%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 700px;
 }
 
 body main .man-info #avatar {
-    border-radius: 20px;
-    width: 285px;
-    height: 285px;
-    -webkit-box-shadow: 0px 1px 10px 1px #000;
-    box-shadow: 0px 1px 10px 1px #000;
+  border-radius: 20px;
+  width: 285px;
+  height: 285px;
+  -webkit-box-shadow: 0px 1px 10px 1px #000;
+  box-shadow: 0px 1px 10px 1px #000;
 }
 
 body main .man-info .score {
-    width: 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    padding: 5px;
-    margin-top: 10px;
-    border-radius: 20px;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    background-color: #cfcfcf;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 5px;
+  margin-top: 10px;
+  border-radius: 20px;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-color: #db1a1a;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 body main .man-info .score img {
-    width: 30px;
-    margin-right: 5px;
-    height: 30px;
-    border-radius: 5px;
+  width: 30px;
+  margin-right: 5px;
+  height: 30px;
+  border-radius: 5px;
 }
 
 body main .man-info .score span {
-    font-size: 30px;
-    font-family: 'BankGothicRUSS';
+  font-size: 30px;
+  font-family: 'BankGothicRUSS';
 }
 
 body main .man-info .info {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    margin-top: 30px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin-top: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  color: #fff;
 }
 
 body main .man-info .info span {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    float: left;
-    margin-top: 30px;
-    font-size: 15px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  float: left;
+  margin-top: 30px;
+  font-size: 15px;
 }
 
 body main .man-info .info span nav {
-    font-family: "BankGothicRUSS";
-    letter-spacing: 1px;
-    margin-left: 10px;
+  font-family: "BankGothicRUSS";
+  letter-spacing: 1px;
+  margin-left: 10px;
 }
 
 body main .opportunuties {
-    width: 60%;
-    height: 700px;
-    margin-left: 5%;
-    background-color: #fff;
+  width: 60%;
+  height: 700px;
+  margin-left: 5%;
+  background-color: #fff;
 }
 
+.wrapper {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  border-radius: 8px;
+  background: #f0f0f0;
+  position: relative;
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+}
 
+header h1 {
+  background: #f0f0f0;
+  color: #555;
+  padding: 1rem;
+  border-radius: 8px 8px 0 0;
+  -webkit-box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.3);
+  position: relative;
+  z-index: 8;
+}
+
+nav {
+  width: 100%;
+  background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
+}
+
+@media (min-width: 769px) {
+  nav {
+    float: left;
+    width: 96px;
+    height: calc(100% - 3rem);
+    border-radius: 0 0 0 8px;
+  }
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (min-width: 769px) {
+  nav ul {
+    display: block;
+  }
+}
+
+nav li {
+  line-height: 3;
+  padding: 0 1rem;
+  border-right: 1px solid #f0f0f0;
+  cursor: pointer;
+  color: #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+@media (min-width: 769px) {
+  nav li {
+    border-bottom: 1px solid #f0f0f0;
+    border-right: none;
+  }
+}
+
+nav li.hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+nav li.pressed {
+  background: rgba(255, 255, 255, 0.7);
+}
+
+nav li.currentPage {
+  background: rgba(255, 255, 255, 0.5);
+}
+
+#contents {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: absolute;
+  height: calc(100% - 6rem);
+  width: 100%;
+  top: 6rem;
+  left: 0;
+  border-radius: 0 0 8px 0;
+  overflow: hidden;
+  background: linear-gradient(135deg, #1c1a30 0%, #38335d 100%);
+}
+
+@media (min-width: 769px) {
+  #contents {
+    height: calc(100% - 3rem);
+    width: calc(100% - 6rem);
+    top: 3rem;
+    left: 96px;
+  }
+}
+
+a#page1 #page2 #page3 {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  padding: 2rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: linear-gradient(135deg, #38335d 0%, #1c1a30 100%);
+  top: 0;
+  left: -100%;
+}
+
+a#page1 #page2 #page3.hide {
+  -webkit-transition: left 0s 0.5s;
+  transition: left 0s 0.5s;
+}
+
+a#page1 #page2 #page3:nth-of-type(1) {
+  z-index: 5;
+}
+
+a#page1 #page2 #page3:nth-of-type(2) {
+  z-index: 4;
+}
+
+a#page1 #page2 #page3:nth-of-type(3) {
+  z-index: 3;
+}
+
+a#page1 #page2 #page3:nth-of-type(4) {
+  z-index: 2;
+}
+
+a#page1 #page2 #page3:nth-of-type(5) {
+  z-index: 1;
+}
+
+a#page1 #page2 #page3.show {
+  -webkit-transition: left 0.5s;
+  transition: left 0.5s;
+  left: 0;
+  z-index: 6;
+}
+
+a#page1 #page2 #page3 section {
+  width: 100%;
+  color: #fff;
+}
+
+a#page1 #page2 #page3 section h1 {
+  font-size: 1.5rem;
+  margin: 0 0 2rem 0;
+}
 /*# sourceMappingURL=profile.css.map */
