--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -185,20 +185,7 @@ body main .opportunuties {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
 
-header {
-    h1 {
-        background: #f0f0f0; //linear-gradient(135deg, #0b5386 0%,#09256c 100%); 
-        color: #555;
-        //text-transform:uppercase;
-        padding: 1rem;
-        border-radius: 8px 8px 0 0;
-        box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.3);
-        position: relative;
-        z-index: 8;
-    }
-}
-
-nav {
+.tabs-nav {
     width: 100%;
     background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
     @media (min-width: 769px) {
