--- a/scss/profile.css
+++ b/scss/profile.css
@@ -188,13 +188,13 @@ body main .opportunuties {
           box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
 
-.tabs-nav {
+.tab-nav {
   width: 100%;
   background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
 }
 
 @media (min-width: 769px) {
-  .tabs-nav {
+  .tab-nav {
     float: left;
     width: 96px;
     height: calc(100% - 3rem);
@@ -202,19 +202,19 @@ body main .opportunuties {
   }
 }
 
-.tabs-nav ul {
+.tab-nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 @media (min-width: 769px) {
-  .tabs-nav ul {
+  .tab-nav ul {
     display: block;
   }
 }
 
-.tabs-nav li {
+.tab-nav li {
   line-height: 3;
   padding: 0 1rem;
   border-right: 1px solid #f0f0f0;
@@ -225,21 +225,21 @@ body main .opportunuties {
 }
 
 @media (min-width: 769px) {
-  .tabs-nav li {
+  .tab-nav li {
     border-bottom: 1px solid #f0f0f0;
     border-right: none;
   }
 }
 
-.tabs-nav li.hover {
+.tab-nav li.hover {
   background: rgba(255, 255, 255, 0.2);
 }
 
-.tabs-nav li.pressed {
+.tab-nav li.pressed {
   background: rgba(255, 255, 255, 0.7);
 }
 
-.tabs-nav li.currentPage {
+.tab-nav li.currentPage {
   background: rgba(255, 255, 255, 0.5);
 }
 
