--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -185,7 +185,7 @@ body main .opportunuties {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
 
-.tabs-nav {
+.tab-nav {
     width: 100%;
     background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
     @media (min-width: 769px) {
