--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -169,48 +169,53 @@ body main .man-info .info span nav {
 
 body main .opportunuties {
     width: 60%;
-    height: 700px;
     margin-left: 5%;
+    height: 100%;
+    //linear-gradient(135deg, #c36fd4 0%,#332bab 100%); 
+    padding: 1.5rem;
+    box-sizing: border-box;
+    font-family: 'Cairo', sans-serif;
 }
 
 //Tab's profile opportunities
 .wrapper {
     width: 100%;
     height: 100%;
-    margin: auto;
     border-radius: 8px;
     background: #f0f0f0;
     position: relative;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
 
-.tab-nav {
-    width: 100%;
-    background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
-    @media (min-width: 769px) {
-        float: left;
-        width: 96px;
-        height: calc(100% - 3rem);
-        border-radius: 0 0 0 8px;
+span {
+    h1 {
+        background: #f0f0f0; //linear-gradient(135deg, #0b5386 0%,#09256c 100%); 
+        color: #555;
+        //text-transform:uppercase;
+        padding: 1rem;
+        border-radius: 8px 8px 0 0;
+        box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.3);
+        position: relative;
+        z-index: 8;
     }
+}
+
+.opp-droplist {
+    background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
+    border-right: 1px solid #fff;
+    width: 10%;
+    height: calc(100% - 3rem);
+    border-radius: 0 0 0 8px;
     ul {
         display: flex;
-        list-style: none;
-        @media (min-width: 769px) {
-            display: block;
-        }
+        flex-direction: column;
     }
     li {
         line-height: 3;
         padding: 0 1rem;
-        border-right: 1px solid #f0f0f0;
         cursor: pointer;
         color: #fff;
         box-sizing: border-box;
-        @media (min-width: 769px) {
-            border-bottom: 1px solid #f0f0f0;
-            border-right: none;
-        }
         &.hover {
             background: rgba(255, 255, 255, 0.2);
         }
@@ -227,15 +232,26 @@ body main .opportunuties {
     box-sizing: border-box;
     position: absolute;
     height: calc(100% - 6rem);
-    width: 100%;
+    width: 80%;
     top: 6rem;
     left: 0;
-    border-radius: 0 0 8px 0;
-    overflow: hidden;
-    background: linear-gradient(135deg, #1c1a30 0%, #38335d 100%);
+    @media (min-width: 769px) {
+        height: calc(100% - 3rem);
+        width: calc(100% - 9.4rem);
+        top: 3rem;
+        left: 150px;
+    }
+    border-radius:0 0 8px 0;
+    overflow:hidden;
+    background: linear-gradient(135deg,
+    #1c1a30 0%,
+    #38335d 100%);
 }
 
-#page1 #page2 #page3 {
+#page1,
+#page2,
+#page3,
+#page4 {
     position: absolute;
     height: 100%;
     width: 100%;
@@ -269,10 +285,10 @@ body main .opportunuties {
     }
     section {
         width: 100%;
+        color: #fff;
         h1 {
             font-size: 1.5rem;
             margin: 0 0 2rem 0;
-            color: #fff;
         }
     }
 }
