--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -228,7 +228,7 @@ span {
     }
 }
 
-contents {
+#contents {
     box-sizing: border-box;
     position: absolute;
     height: calc(100% - 6rem);
