--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -185,7 +185,7 @@ body main .opportunuties {
 
 #tabs .whiteborder {
     border: 1px solid #707070;
-    color: #fff;
+    background-color: #fff;
     border-radius: 3px solid 0 0;
 }
 
