--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -199,102 +199,101 @@ body main .opportunuties {
             z-index: 8;
         }
     }
-}
-
-// nav {
-//     width: 100%;
-//     background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
-//     @media (min-width: 769px) {
-//         float: left;
-//         width: 96px;
-//         height: calc(100% - 3rem);
-//         border-radius: 0 0 0 8px;
-//     }
-//     ul {
-//         display: flex;
-//         @media (min-width: 769px) {
-//             display: block;
-//         }
-//     }
-//     li {
-//         line-height: 3;
-//         padding: 0 1rem;
-//         border-right: 1px solid #f0f0f0;
-//         cursor: pointer;
-//         color: #fff;
-//         box-sizing: border-box;
-//         @media (min-width: 769px) {
-//             border-bottom: 1px solid #f0f0f0;
-//             border-right: none;
-//         }
-//         &.hover {
-//             background: rgba(255, 255, 255, 0.2);
-//         }
-//         &.pressed {
-//             background: rgba(255, 255, 255, 0.7);
-//         }
-//         &.currentPage {
-//             background: rgba(255, 255, 255, 0.5);
-//         }
-//     }
-// }
-// #contents {
-//     box-sizing: border-box;
-//     position: absolute;
-//     height: calc(100% - 6rem);
-//     width: 100%;
-//     top: 6rem;
-//     left: 0;
-//     @media (min-width: 769px) {
-//         height: calc(100% - 3rem);
-//         width: calc(100% - 6rem);
-//         top: 3rem;
-//         left: 96px;
-//     }
-//     border-radius:0 0 8px 0;
-//     overflow:hidden;
-//     background: linear-gradient(135deg,
-//     #1c1a30 0%,
-//     #38335d 100%);
-// }
-article {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    padding: 2rem;
-    box-sizing: border-box;
-    background: linear-gradient(135deg, #38335d 0%, #1c1a30 100%);
-    top: 0;
-    left: -100%;
-    &.hide {
-        transition: left 0s 0.5s;
-    }
-    &:nth-of-type(1) {
-        z-index: 5;
-    }
-    &:nth-of-type(2) {
-        z-index: 4;
-    }
-    &:nth-of-type(3) {
-        z-index: 3;
-    }
-    &:nth-of-type(4) {
-        z-index: 2;
-    }
-    &:nth-of-type(5) {
-        z-index: 1;
-    }
-    &.show {
-        transition: left 0.5s;
-        left: 0;
-        z-index: 6;
-    }
-    section {
+    nav {
         width: 100%;
-        color: #fff;
-        h1 {
-            font-size: 1.5rem;
-            margin: 0 0 2rem 0;
+        background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
+        @media (min-width: 769px) {
+            float: left;
+            width: 96px;
+            height: calc(100% - 3rem);
+            border-radius: 0 0 0 8px;
+        }
+        ul {
+            display: flex;
+            @media (min-width: 769px) {
+                display: block;
+            }
+        }
+        li {
+            line-height: 3;
+            padding: 0 1rem;
+            border-right: 1px solid #f0f0f0;
+            cursor: pointer;
+            color: #fff;
+            box-sizing: border-box;
+            @media (min-width: 769px) {
+                border-bottom: 1px solid #f0f0f0;
+                border-right: none;
+            }
+            &.hover {
+                background: rgba(255, 255, 255, 0.2);
+            }
+            &.pressed {
+                background: rgba(255, 255, 255, 0.7);
+            }
+            &.currentPage {
+                background: rgba(255, 255, 255, 0.5);
+            }
+        }
+    }
+    #contents {
+        box-sizing: border-box;
+        position: absolute;
+        height: calc(100% - 6rem);
+        width: 100%;
+        top: 6rem;
+        left: 0;
+        @media (min-width: 769px) {
+            height: calc(100% - 3rem);
+            width: calc(100% - 6rem);
+            top: 3rem;
+            left: 96px;
+        }
+        border-radius:0 0 8px 0;
+        overflow:hidden;
+        background: linear-gradient(135deg,
+        #1c1a30 0%,
+        #38335d 100%);
+    }
+    article {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        padding: 2rem;
+        box-sizing: border-box;
+        background: linear-gradient(135deg, #38335d 0%, #1c1a30 100%);
+        top: 0;
+        left: -100%;
+        &.hide {
+            transition: left 0s 0.5s;
+        }
+        &:nth-of-type(1) {
+            z-index: 5;
+        }
+        &:nth-of-type(2) {
+            z-index: 4;
+        }
+        &:nth-of-type(3) {
+            z-index: 3;
+        }
+        &:nth-of-type(4) {
+            z-index: 2;
+        }
+        &:nth-of-type(5) {
+            z-index: 1;
+        }
+        &.show {
+            transition: left 0.5s;
+            left: 0;
+            z-index: 6;
+        }
+        section {
+            width: 100%;
+            color: #fff;
+            h1 {
+                font-size: 1.5rem;
+                margin: 0 0 2rem 0;
+            }
         }
     }
 }
