change percent on fraction

--- a/scss/profile.css
+++ b/scss/profile.css
@@ -321,10 +321,10 @@ body main .opportunuties {
   height: 100%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 50% 50%;
-      grid-template-rows: 50% 50%;
-  -ms-grid-columns: 30% 30%;
-      grid-template-columns: 30% 30%;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
 }
 
 .friends .friend {
