--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -286,8 +286,8 @@
                 width: 100%;
                 height: 100%;
                 display: grid;
-                grid-template-rows: 50% 50%;
-                grid-template-columns: 30% 30%;
+                grid-template-rows: 1fr 1fr;
+                grid-template-columns: 1fr 1fr;
                 .friend {
                     display: flex;
                     flex-direction: column;
