--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -105,7 +105,7 @@
      width: 285px;
      height: 285px;
      // -webkit-box-shadow: 0px 1px 10px 1px #000;
-     // box-shadow: 0px 1px 10px 1px #000;
+     box-shadow: 0px 1px 10px 1px #000;
  }
  
  body main .man-info .score {
@@ -188,14 +188,14 @@
      border-radius: 8px;
      background: #f0f0f0;
      position: relative;
-     // box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
      .title {
          background: #ececec; //linear-gradient(135deg, #0b5386 0%, #09256c 100%);
          color: rgb(177, 143, 143);
          //text-transform:uppercase;
          padding: .5em;
          border-radius: 8px 8px 0 0;
-         // box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.3);
+         box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.3);
          position: relative;
          font-size: 30px;
      }
@@ -300,7 +300,7 @@
          justify-content: center;
          align-items: center;
          border-radius: 8px;
-         // box-shadow: 1px 0 50px 5px #000;
+         box-shadow: 1px 0 50px 5px #000;
          margin: 2vw;
          .circle-avatar {
              background-color: #cfcfcf;
