--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -283,37 +283,13 @@
  }
  
  // In tabs friends
- .friends {
-     width: 100%;
-     height: auto;
+ .block-friends {
      display: grid;
-     grid-template-rows: 1fr 1fr;
-     grid-template-columns: 1fr 1fr;
-     .friend {
-         display: flex;
-         flex-direction: column;
-         width: 50%;
-         height: 50%;
-         text-align: center;
+     width: 100%;
+     height: 100%;
+     div {
+         height: 50px;
+         width: 50px;
          background-color: #fff;
-         color: #000;
-         justify-content: center;
-         align-items: center;
-         border-radius: 8px;
-         box-shadow: 1px 0 50px 5px #000;
-         margin: 2vw;
-         .circle-avatar {
-             background-color: #cfcfcf;
-             width: 150px;
-             height: 150px;
-             border-radius: 50%;
-         }
-         .friend-name {
-             margin-top: 5%;
-             span {
-                 font-family: 'Rubik Mono One', sans-serif;
-                 font-size: 14px;
-             }
-         }
      }
  }
